// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> should render without a problem 1`] = `
.c1 {
  position: absolute;
  width: 0;
  opacity: 0;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 3.8rem;
  height: 2rem;
  border-radius: 1rem;
  background: hsl(207,22%,90%);
  border: 1px solid hsl(207,22%,90%);
  cursor: pointer;
  pointer-events: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.2rem;
  cursor: pointer;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 1.6rem;
  background: hsl(0,100%,100%);
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.15);
  -webkit-transition: -webkit-transform 250ms ease;
  -webkit-transition: transform 250ms ease;
  transition: transform 250ms ease;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  will-change: transform;
}

.c2:active:before {
  width: 3rem;
  left: 6px;
}

.c0 {
  cursor: pointer;
  display: inline-block;
  height: 2rem;
  position: relative;
  vertical-align: middle;
}

<div
  class="c0"
>
  <input
    class="c1"
    readonly=""
    type="checkbox"
  />
  <span
    class="c2"
    data-testid="toggle-button"
  />
</div>
`;

exports[`<ToggleButton /> should render without a problem when checked 1`] = `
.c1 {
  position: absolute;
  width: 0;
  opacity: 0;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 3.8rem;
  height: 2rem;
  border-radius: 1rem;
  background: hsl(200,74%,46%) linear-gradient( 0deg, hsla(0,100%,100%,0) 0%, hsla(0,100%,100%,0.1) 100% );
  border: 1px solid hsl(200,74%,46%);
  cursor: pointer;
  pointer-events: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.2rem;
  cursor: pointer;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 1.6rem;
  background: hsl(0,100%,100%);
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.15);
  -webkit-transition: -webkit-transform 250ms ease;
  -webkit-transition: transform 250ms ease;
  transition: transform 250ms ease;
  -webkit-transform: translateX(1.7rem);
  -ms-transform: translateX(1.7rem);
  transform: translateX(1.7rem);
  will-change: transform;
}

.c2:active:before {
  width: 3rem;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: inline-block;
  height: 2rem;
  position: relative;
  vertical-align: middle;
}

<div
  class="c0"
>
  <input
    class="c1"
    readonly=""
    type="checkbox"
  />
  <span
    class="c2"
    data-testid="toggle-button"
  />
</div>
`;

exports[`<ToggleButton /> should toggle 1`] = `[Function]`;

exports[`<ToggleButton /> should toggle 2`] = `[Function]`;
